Fixed some errors in trainer

--- a/config/default_config.ini
+++ b/config/default_config.ini
@@ -1,8 +1,6 @@
 [Experiment info]
 name: AddingNoise
-directory to store files: default
-
-[Job info]
+storage directory: default
 number of models: 50
 number of jobs: 2
 
@@ -11,6 +9,7 @@ model parameters: default
 save models: true
 num epochs: 50
 dataset: cifar10
+dataset params: default
 measure forget: true
 track correct examples: true
 save forget_dataset: true
@@ -24,6 +23,7 @@ model parameters: default
 save models: true
 num epochs: 50
 dataset: cifar10
+dataset params: default
 measure forget: true
 track correct examples: true
 save forget_dataset: true
