--- a/config/default_config.ini
+++ b/config/default_config.ini
@@ -8,6 +8,7 @@ number of jobs: 2
 model parameters: default
 save models: true
 num epochs: 50
+save every: 10
 dataset: cifar10
 dataset params: default
 measure forget: true
@@ -22,6 +23,7 @@ save clones: true
 model parameters: default
 save models: true
 num epochs: 50
+save every: 10
 dataset: cifar10
 dataset params: default
 measure forget: true
