Started working on postprocess files

--- a/config/default_config.ini
+++ b/config/default_config.ini
@@ -1,13 +1,13 @@
 [Experiment info]
-name: AddingNoise
+name: AddingNoise2
 storage directory: default
-number of models: 50
+number of models: 10
 number of jobs: 2
 
 [Job 1]
 model parameters: default
 save models: true
-num epochs: 50
+num epochs: 30
 save every: 10
 dataset: cifar10
 dataset params: default
@@ -22,7 +22,7 @@ save clones: true
 [Job 2]
 model parameters: default
 save models: true
-num epochs: 50
+num epochs: 30
 save every: 10
 dataset: cifar10
 dataset params: default
